fix UI behind setting statistic values

--- a/app/assets/stylesheets/all.css.scss
+++ b/app/assets/stylesheets/all.css.scss
@@ -3,6 +3,7 @@ $main-color-light: #79d2a1;
 $main-color-extra-light: #c6ecd7;
 $gray-light: #b3b3b3;
 $gray-extra-light: #e6e6e6;
+$primary-color: #7768AE;
 
 .small-font {
   font-size: 8px;
@@ -12,8 +13,28 @@ $gray-extra-light: #e6e6e6;
   font-size: 16px;
 }
 
+.medium-large-font {
+  font-size: 20px;
+}
+
 .large-font {
   font-size: 24px;
+}
+
+.primary-color {
+  color: $primary-color;
+}
+
+.main-color {
+  color: $main-color;
+}
+
+.main-color-light {
+  color: $main-color-light;
+}
+
+.main-color-extra-light {
+  color: $main-color-extra-light;
 }
 
 .deprecated {
