--- a/app/assets/stylesheets/dg.scss
+++ b/app/assets/stylesheets/dg.scss
@@ -51,75 +51,28 @@
   border: solid 1px grey;
   margin: 5px 0;
   padding: 2px 10px;
+  background-color: $main-color-extra-light;
 
   &:focus {
-    background-color: $gray-light;
+    background-color: $main-color;
     outline: none;
   }
-  &.selected {
-    background-color: $main-color-light;
-  }
-  &.selected:focus {
-    background-color: $main-color-light;
-  }
-}
-
-.selectable {
-  cursor: pointer;
-  background-color: $gray-light;
-
   &:hover {
-    background-color: $gray-extra-light;
+    background-color: $main-color;
   }
-
   &.selected {
-    background-color: $main-color-light;
+    background-color: $main-color;
   }
-  &.selected:hover {
-    background-color: $main-color-extra-light;
+  &.selected:focus, &.selected:hover {
+    background-color: $main-color;
   }
-
-  &.unselectable {
-    cursor: auto;
+  &.unselectable, &.unselectable:focus, &.unselectable:hover {
     background-color: $gray-extra-light;
-    &:hover {
-      background-color: $gray-extra-light;
-    }
-    &.selected {
-      background-color: $main-color-light;
-      &:hover {
-        background-color: $main-color-light;
-      }
-    }
   }
 }
 
-.statistic-set-option {
-  @include selectable-option;
-  display: flex;
-  justify-content: center;
-  border-radius: 15px;
-
-  .statistic-set-option-name {
-    width: 120px;
-    padding: 3px;
-  }
-
-  .statistic-set-option-value {
-    width: 20px;
-    text-align: center;
-    padding: 3px 20px;;
-  }
-}
-
-.statistic-value {
-  background-color: white;
-  border-top: solid 2px #e6e6e6;
-  border-right: solid 2px #e6e6e6;
-  border-left: solid 1px #e6e6e6;
-  border-bottom: solid 2px #e6e6e6;
-  margin: 5px 5px 5px 0;
-  padding: 8px;
+.unselectable {
+  background-color: $gray-light;
 }
 
 .assign-attribute-subtext {
