--- a/app/assets/stylesheets/dg_campaign.scss
+++ b/app/assets/stylesheets/dg_campaign.scss
@@ -35,8 +35,8 @@
     }
 
     .dg-card-section {
-      max-height: 515px;
-      min-height: 515px;
+      max-height: 510px;
+      min-height: 510px;
       overflow-y: scroll;
       overflow-x: hidden;
       &::-webkit-scrollbar {
